--- a/templates/default/zabbix_nginx.erb
+++ b/templates/default/zabbix_nginx.erb
@@ -1,11 +1,19 @@
 server {
 
   listen      <%= @web_port %>;
+  <%= "listen #{@web_ssl_port]} ssl;" if ! @web_ssl_port.nil? %>
   index       index.php;
   root        <%= @web_dir %>;
   server_name "<%=@server_name%>";
   
   access_log /var/log/nginx/zabbix.access.log;
+
+  <% if @ssl_certificate -%>
+  ssl_certificate <%= @ssl_certificate %>;
+  ssl_certificate_key <%= @ssl_certificate_key %>;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_timeout 10m;
+  <% end -%>
 
   location ~ .*\.php$ {
     include /etc/nginx/fastcgi_params;
