--- a/templates/default/zabbix_server.conf.erb
+++ b/templates/default/zabbix_server.conf.erb
@@ -15,14 +15,14 @@ DBPort=<%= @dbport %>
 DebugLevel=<%= node['zabbix']['server']['log_level'] %>
 PidFile=<%= node['zabbix']['run_dir'] %>/zabbix_server.pid
 Include=<%= node['zabbix']['server']['include_dir'] %>
-<% if not node['zabbix']['server']['proxy'] -%>
-AlertScriptsPath=<%= node['zabbix']['alert_dir'] %>
-<% end -%>
 
 <% if not node['zabbix']['server']['proxy'] -%>
+AlertScriptsPath=<%= node['zabbix']['alert_dir'] %>
+MaxHousekeeperDelete=<%= node['zabbix']['server']['max_housekeeper_delete'] %>
 HousekeepingFrequency=<%= node['zabbix']['server']['housekeeping_frequency']%>
 MaxHousekeeperDelete=<%= node['zabbix']['server']['max_housekeeper_delete'] %>
 <% end -%>
+
 
 JavaGateway=<%= @java_gateway %>
 JavaGatewayPort=<%= @java_gateway_port %>
